--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-text-size: 2rem;
+    --primary-text-size: 2.8rem;
     --secondary-text-size: 1.4rem;
     --off-white: #ededed;
     --grey: #cecece;
@@ -10,25 +10,46 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
 
 html {
     font-size: 62.5%;
+    font-family: 'Montserrat', sans-serif;
 }
 
 header {
     display: inline-block;
-    width: 20%;
+    width: 15%;
     height: 100vh;
     position: fixed;
     background-color: var(--off-white);
     overflow-y: scroll;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:visited {
+    color: black;
+}
+
+
+
+h1 {
+    width: 100%;
+    margin: 8rem auto;
+    font-size: 2.8rem;
+    font-weight: 700;    
+    text-align: center;
+}
+
 .header__title {
     width: 100%;
     height: 80px;
-    font-size: var(--primary-text-size);
+    font-size: 2rem;
     padding-top: 35px;
     margin: 0 auto;
     text-align: center;
@@ -36,8 +57,7 @@ header {
 
 .header__tag-list {
     width: 100%;
-    margin: 0 auto;
-    
+    margin: 0 auto;    
 }
 
 .header__tag-list ul{
@@ -45,30 +65,61 @@ header {
 }
 
 .header__tag-list li {
-    height: 20px;
-    padding: 5px 0;
+    height: 30px;
+    padding: 10px 0;
     padding-left: 20px;
+    font-size: var(--secondary-text-size);
 }
 
 .header__tag-list li:hover {
     background-color: #999999;
+    cursor: pointer;
 }
 
 .container {
     display: inline-block;
-    width: 80%;
+    width: 85%;
     height: 100vh;
-    margin-left: 20%;
+    margin-left: 15%;
     background-color: var(--just-white);
-}
-
-.container__title {
-    width: 100%;
-    margin: 30px auto;
-    font-size: var(--primary-text-size);
-    text-align: center;
 }
 
 .container__glossary {
     font-size: var(--secondary-text-size);
+    margin: 8rem;
+}
+
+.container__glossary table {
+    width: 100%;
+    border: 1px solid black;
+    border-collapse: collapse;
+    text-align: center;
+}
+
+.container__glossary tr:nth-child(odd) {
+    background-color: var(--google-border);
+}
+
+.container__glossary table:nth-child(even) {
+    background-color: var(--off-white);
+}
+
+table th, td {
+    padding: 10px 0;
+    border: 1px solid var(--google-border);
+    text-align: center;
+}
+
+table td:nth-child(odd) {
+    width: 25%;
+    border-right: none;
+}
+
+table td:nth-child(even) {
+    width: 75%;
+    border-left: none;
+}
+
+table th:nth-child(even), table td:nth-child(even) {
+    padding-right: 40px;
 }
