--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -159,21 +159,49 @@ table td:nth-child(even) {
 }
 
 @media screen and (max-width: 425px) {
+    header, .container__header p {
+        display: none;
+    }
+
+    .container {
+        width: 100%;
+        margin: 0;        
+    }
+
+    .container__header {
+        justify-content: center;
+        text-align: center;
+    }
+
+    .container__glossary {
+        margin: 10px;
+    }
+}
+
+@media screen and (max-width: 375px) {
     header {
         display: none;
     }
 
     .container {
         width: 100%;
-        margin: 0;
-        
+        margin: 0;        
     }
 
     .container__header {
+        justify-content: center;
         height: 50px;
     }
 
+    .container__header > * {
+        padding-top: 18px;
+    }
+
+    .container__header p {
+        display: none
+    }
+
     .container__glossary {
-        margin: 10px;
+        margin: 5px;
     }
 }
